--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div class="row">
   app.component.html
+  <br/>
   Result :  {{result}}
+  <br/>
+  resultSpread : {{resultSpread}}
+  <br/>
+  resultStr : {{this.resultStr}}
 </div>
